--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 15:05:23 2018</p>
+         Last Run: Thu Jul 12 16:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>4</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>21</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
                         <td>30</td>
                         <td>2</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>20</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>31</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>32</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -72,9 +72,9 @@
                         <td>0</td>
                         <td>37</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SE</td>
-                        <td>29</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>27</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -134,7 +134,7 @@
                "data":[
                  "26",
                  "26",
-                 "25",
+                 "26",
                  "24",
                  "22"
                ]
@@ -147,7 +147,7 @@
                "data":[
                  "26",
                  "26",
-                 "25",
+                 "26",
                  "24",
                  "22"
                ]
@@ -214,9 +214,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "29",
                  "30",
-                 "34",
+                 "30",
+                 "31",
                  "37",
                  "43"
                ]
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "20",
-                 "32",
-                 "29",
-                 "27"
+                 "31",
+                 "31",
+                 "44",
+                 "26",
+                 "18"
                ]
              }
            ]
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 15:05:23 2018</p>
+         Last Run: Thu Jul 12 16:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -277,7 +277,7 @@
                         <td>3</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>52</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -285,11 +285,11 @@
                         <td>14</td>
                         <td>14</td>
                         <td>1</td>
-                        <td>56</td>
-                        <td>4</td>
+                        <td>55</td>
+                        <td>5</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>47</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -301,7 +301,7 @@
                         <td>6</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>43</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -323,7 +323,7 @@
                         <td>15</td>
                         <td>39</td>
                         <td>7</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NNW</td>
                         <td>45</td>
                      </tr>
@@ -454,7 +454,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "65",
-                 "56",
+                 "55",
                  "46",
                  "42",
                  "39"
@@ -465,9 +465,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "47",
-                 "43",
+                 "45",
+                 "41",
+                 "38",
                  "43",
                  "45"
                ]
@@ -486,7 +486,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 15:05:23 2018</p>
+         Last Run: Thu Jul 12 16:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -724,7 +724,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 15:05:23 2018</p>
+         Last Run: Thu Jul 12 16:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -746,10 +746,10 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>25</td>
                         <td>2</td>
                         <td>16</td>
                         <td>SE</td>
@@ -758,22 +758,22 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>SE</td>
                         <td>7</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>0</td>
                         <td>16</td>
                         <td>ESE</td>
@@ -821,9 +821,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "28",
                  "27",
-                 "26",
-                 "25"
+                 "26"
                ]
              },
              {
@@ -832,9 +832,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "28",
                  "27",
-                 "26",
-                 "25"
+                 "26"
                ]
              }
            ]
@@ -895,9 +895,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "26",
-                 "28",
-                 "33"
+                 "25",
+                 "27",
+                 "32"
                ]
              },
              {
@@ -924,7 +924,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 15:05:23 2018</p>
+         Last Run: Thu Jul 12 16:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
