--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 16:05:23 2018</p>
+         Last Run: Thu Jul 12 17:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>05:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>26</td>
-                        <td>26</td>
-                        <td>0</td>
-                        <td>30</td>
-                        <td>4</td>
-                        <td>10</td>
-                        <td>SSE</td>
-                        <td>31</td>
-                     </tr>
-                     <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
                         <td>30</td>
                         <td>2</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>31</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -62,7 +50,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>44</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -70,11 +58,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>35</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SE</td>
-                        <td>26</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -119,7 +107,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "05:00 PM",
              "06:00 PM",
              "07:00 PM",
              "08:00 PM",
@@ -134,7 +121,6 @@
                "data":[
                  "26",
                  "26",
-                 "26",
                  "24",
                  "22"
                ]
@@ -145,7 +131,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "26",
                  "26",
                  "26",
                  "24",
@@ -190,7 +175,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "05:00 PM",
              "06:00 PM",
              "07:00 PM",
              "08:00 PM",
@@ -205,7 +189,6 @@
                  "0",
                  "0",
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -215,9 +198,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "30",
-                 "30",
                  "31",
-                 "37",
+                 "35",
                  "43"
                ]
              },
@@ -226,10 +208,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "31",
-                 "31",
-                 "44",
-                 "26",
+                 "20",
+                 "34",
+                 "27",
                  "18"
                ]
              }
@@ -248,7 +229,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 16:05:23 2018</p>
+         Last Run: Thu Jul 12 17:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -286,7 +267,7 @@
                         <td>14</td>
                         <td>1</td>
                         <td>55</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
                         <td>41</td>
@@ -486,7 +467,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 16:05:23 2018</p>
+         Last Run: Thu Jul 12 17:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -511,7 +492,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>55</td>
+                        <td>54</td>
                         <td>2</td>
                         <td>8</td>
                         <td>S</td>
@@ -523,7 +504,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>48</td>
+                        <td>46</td>
                         <td>3</td>
                         <td>10</td>
                         <td>S</td>
@@ -532,12 +513,12 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
                         <td>11</td>
                      </tr>
@@ -547,11 +528,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>6</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -559,11 +540,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>7</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>14</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -611,7 +592,7 @@
                "data":[
                  "16",
                  "18",
-                 "19",
+                 "20",
                  "21",
                  "22"
                ]
@@ -624,7 +605,7 @@
                "data":[
                  "16",
                  "18",
-                 "19",
+                 "20",
                  "21",
                  "22"
                ]
@@ -691,11 +672,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "48",
-                 "43",
-                 "39",
-                 "35"
+                 "54",
+                 "46",
+                 "42",
+                 "38",
+                 "36"
                ]
              },
              {
@@ -706,8 +687,8 @@
                  "1",
                  "5",
                  "11",
-                 "15",
-                 "14"
+                 "14",
+                 "12"
                ]
              }
            ]
@@ -724,7 +705,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 16:05:23 2018</p>
+         Last Run: Thu Jul 12 17:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -751,9 +732,9 @@
                         <td>0</td>
                         <td>25</td>
                         <td>2</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SE</td>
-                        <td>4</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -761,11 +742,11 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>28</td>
                         <td>1</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>SE</td>
-                        <td>7</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -773,11 +754,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>0</td>
-                        <td>16</td>
-                        <td>ESE</td>
-                        <td>10</td>
+                        <td>14</td>
+                        <td>SE</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -896,8 +877,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "25",
-                 "27",
-                 "32"
+                 "28",
+                 "33"
                ]
              },
              {
@@ -905,9 +886,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "7",
-                 "10"
+                 "1",
+                 "5",
+                 "8"
                ]
              }
            ]
@@ -924,7 +905,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 16:05:23 2018</p>
+         Last Run: Thu Jul 12 17:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -948,24 +929,24 @@
                         <td>Clear</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>5</td>
-                        <td>35</td>
+                        <td>4</td>
+                        <td>36</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>E</td>
-                        <td>19</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>5</td>
-                        <td>39</td>
+                        <td>4</td>
+                        <td>41</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>E</td>
-                        <td>22</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -973,11 +954,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>24</td>
-                        <td>46</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>24</td>
+                        <td>28</td>
                      </tr>
                   </tbody>
                </table>
@@ -1085,8 +1066,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
+                 "4",
+                 "4",
                  "24"
                ]
              },
@@ -1095,9 +1076,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
-                 "39",
-                 "46"
+                 "36",
+                 "41",
+                 "48"
                ]
              },
              {
@@ -1105,9 +1086,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "22",
-                 "24"
+                 "25",
+                 "26",
+                 "28"
                ]
              }
            ]
